fix alignment of icons. Thx @thaddeus

--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -10,6 +10,7 @@
 
 .footer-wrapper svg {
     height: 20px;
+    vertical-align: middle;
     width: 20px;
 }
 
